--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
+        "start:dev": "ng serve --open -c=development",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
