--- a/package.json
+++ b/package.json
@@ -27,12 +27,17 @@
         "@angular/platform-browser-dynamic": "13.1.1",
         "@angular/router": "13.1.1",
         "@ngneat/transloco": "3.1.1",
+        "@ngrx/effects": "^13.0.2",
+        "@ngrx/store": "^13.0.2",
+        "@ngrx/store-devtools": "^13.0.2",
         "apexcharts": "3.32.0",
+        "aws-amplify": "^4.3.11",
         "crypto-js": "3.3.0",
         "highlight.js": "11.3.1",
         "lodash-es": "4.17.21",
         "moment": "2.29.1",
         "ng-apexcharts": "1.6.0",
+        "ngrx-store-freeze": "^0.2.4",
         "ngx-markdown": "13.0.0",
         "ngx-quill": "16.1.1",
         "perfect-scrollbar": "1.5.3",
