Committing after working on the Profile Type dropdown in the Users view

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@fuse/demo",
     "version": "14.1.0",
-    "description": "Fuse - Angular Admin Template and Starter Project",
+    "description": "FreightCO2 - A Trucking Freight CO2 Measurement Application",
     "author": "https://themeforest.net/user/srcn",
     "license": "https://themeforest.net/licenses/standard",
     "private": true,
